--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -12,18 +12,39 @@
         android:text="Log In via Battle.net"
         android:layout_width="222dp"
         android:layout_height="80dp"
-        tools:layout_editor_absoluteX="81dp"
-        tools:layout_editor_absoluteY="243dp"
-        android:id="@+id/button"
+        android:id="@+id/btn_login"
         android:textColor="#FFF"
-        android:background="@color/battlenetBlue" />
+        android:background="@color/battlenetBlue"
+        app:layout_constraintLeft_toLeftOf="@+id/content_login"
+        android:layout_marginStart="16dp"
+        app:layout_constraintTop_toTopOf="@+id/content_login"
+        android:layout_marginTop="312dp"
+        app:layout_constraintRight_toRightOf="@+id/content_login"
+        android:layout_marginEnd="16dp" />
 
     <TextView
         android:text="You have to Sign In using your Battle.net account"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        tools:layout_editor_absoluteY="185dp"
         android:id="@+id/textView3"
         app:layout_constraintLeft_toLeftOf="@+id/content_login"
-        android:layout_marginStart="40dp" />
+        android:layout_marginStart="16dp"
+        app:layout_constraintTop_toTopOf="@+id/content_login"
+        android:layout_marginTop="184dp"
+        app:layout_constraintRight_toRightOf="@+id/content_login"
+        android:layout_marginEnd="16dp" />
+
+    <Spinner
+        android:layout_width="222dp"
+        android:layout_height="41dp"
+        android:id="@+id/regionSelect"
+        android:spinnerMode="dialog"
+        app:layout_constraintLeft_toLeftOf="@+id/content_login"
+        android:layout_marginStart="16dp"
+        app:layout_constraintTop_toTopOf="@+id/textView3"
+        app:layout_constraintRight_toRightOf="@+id/content_login"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_login"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.86" />
 </android.support.constraint.ConstraintLayout>
